# RobotiqueMobile_ROS2

./: .gitignore  README.md
docker/: Dockerfile  docker-compose-linux-xorg.yml  docker-compose-novnc.yml  docker-compose-windows.yml  run_linux_novnc.bash  run_linux_x11.bash  run_windows_novnc.ps1
documents/: 0_docker.md  1_1_ros2_introduction.md  1_2_ros2_first_node.md  1_3_ros2_tp1_teleop_turtle.md  2_1_ros2_launch_file.md  2_2_ros2_my_action.md  2_3_ros2_tp2_follow_path.md  3_1_simulating_a_robot.md  3_2_ros2_gazebo.md  3_3_gazebo_lidar.md  3_4_tp3_out_of_box.md
wdir/: hello.txt
wdir/src/: tp3_TORIEN.rar
wdir/src/my_first_package/: CMakeLists.txt  package.xml
wdir/src/my_first_package/src/: my_first_node.py  my_publisher.py  my_subscriber.py
wdir/src/tp1/: CMakeLists.txt  package.xml
wdir/src/tp1/action/: Path.action
wdir/src/tp1/launch/: demo_launch.py  my_launch.py
wdir/src/tp1/src/: follow_path.py  my_teleop.py  test_path.py
wdir/src/tp3/tp3_description/: CMakeLists.txt  package.xml
wdir/src/tp3/tp3_description/gazebo/: generate_room.py  my_first_world.sdf  tp3_ground.sdf  tp3_light.sdf  tp3_room.sdf  tp3_room1.sdf  tp3_wall.sdf  tp3_world.sdf
wdir/src/tp3/tp3_description/launch/: base_gazebo_launch.py  base_rviz_launch.py  teleop_gazebo_launch.py  teleop_rviz_gazebo_launch.py  tp3_description_launch.py
wdir/src/tp3/tp3_description/rviz/: base.rviz  lidar_gazebo.rviz
wdir/src/tp3/tp3_description/urdf/: tp3_robot.urdf
wdir/src/tp3/tp3_nodes/: CMakeLists.txt  package.xml
wdir/src/tp3/tp3_nodes/launch/: tp3_nodes_launch.py
wdir/src/tp3/tp3_nodes/src/: escape_room.py  test.py
